# markdon

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.md  README.md  index.html  package.json  playwright.config.ts  release-please-config.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release-please.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
docs/superpowers/plans/: 2026-07-17-markdown-editor.md
docs/superpowers/specs/: 2026-07-17-markdown-editor-design.md
e2e/: auto-preview.spec.ts  buffer-cache.spec.ts  cli-install.spec.ts  empty-state.spec.ts  error-banner.spec.ts  file-cycling.spec.ts  fileops-menu.spec.ts  guarded-flows.spec.ts  image-paste.spec.ts  image-view.spec.ts  last-file.spec.ts  open-files-menu.spec.ts  open-files-pane.spec.ts  quick-open.spec.ts  recent-workspaces.spec.ts  sidebar-a11y.spec.ts  sidebar-preview.spec.ts  sidebar-rename.spec.ts  smoke.spec.ts  split-toggle.spec.ts  tab-persist.spec.ts  theme-toggle.spec.ts  workspace-watch.spec.ts
e2e/support/: contract.ts  global.d.ts  tauriInternals.js  workspaceFixture.ts
scripts/: md  mdCli.mjs  vendor-icons.mjs
src/: App.svelte  Banner.svelte  ContextMenu.svelte  Editor.svelte  EmptyState.svelte  FileOpsMenu.svelte  FindBar.svelte  GoToLineBar.svelte  Header.svelte  HistoryModal.svelte  Icon.svelte  ImageView.svelte  Modal.svelte  MoveToModal.svelte  NameModal.svelte  OpenFilesStrip.svelte  Popover.svelte  PreviewPane.svelte  QuickOpen.svelte  ReadonlyMarkdown.svelte  SettingsModal.svelte  Sidebar.svelte  SidebarHeader.svelte  SourcePane.svelte  SplitView.svelte  StatusBar.svelte  WorkspaceTree.svelte  app.css  cm-theme.css  editor-theme.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: allowlist.rs  cli_install.rs  commands.rs  dialogs.rs  error.rs  fileops.rs  fsutil.rs  history.rs  launch.rs  lib.rs  menu.rs  pdf.rs  prefs.rs  process.rs  watcher.rs  windows.rs  workspace.rs
src/assets/icons/: README.md
src/lib/: appBoot.test.ts  appBoot.ts  appKeymap.test.ts  appKeymap.ts  assertInvariant.ts  autofocus.ts  bufferCache.test.ts  bufferCache.ts  bufferFlush.test.ts  bufferFlush.ts  cliInstall.test.ts  cliInstall.ts  closedStack.test.ts  closedStack.ts  coalesce.test.ts  coalesce.ts  contextMenu.test.ts  contextMenu.ts  doc.test.ts  doc.ts  document.test.ts  document.ts  echoGuard.test.ts  echoGuard.ts  errors.test.ts  errors.ts  export.test.ts  export.ts  fileMutations.test.ts  fileMutations.ts  fileOpsState.test.ts  fileOpsState.ts  fileSync.test.ts  fileSync.ts  fileTree.test.ts  fileTree.ts  fileops.test.ts  fileops.ts  files.test.ts  files.ts  (+65 more)
src/lib/test-support/: stubContract.test.ts  tauriMocks.ts  workspaceFixtures.ts
