[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
# Bumped from 1.77.2 for the `trash` crate (5.x MSRV 1.85.0), used by the file-
# operations Delete command to move entries to the OS Trash instead of unlinking.
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
notify = "6"
tempfile = "3"
# Move-to-Trash for the sidebar Delete op. On macOS this wraps
# NSFileManager.trashItem via the objc2 0.6 / objc2-foundation 0.3 stack already
# vendored below for pdf.rs, so no new native-dependency family is introduced.
trash = "5"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = "2"

# PDF export drives the native macOS print panel (NSPrintOperation) directly on
# the WKWebView reached via tauri's `with_webview`. Versions pinned to match the
# ones tauri 2.11 / wry 0.55 already resolve in Cargo.lock (objc2 0.6, objc2-*
# 0.3) so no lockfile churn. See src/pdf.rs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSPrintInfo", "NSPrintOperation"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "objc2-app-kit"] }

[dev-dependencies]
# Only to unit-test that the "CmdOrCtrl+," settings accelerator parses (see
# menu.rs tests) — tauri's MenuItemBuilder swallows parse failures silently
# (`.and_then(|s| s.parse().ok())`), so this is the one way to actually
# verify the string muda receives is valid without launching the GUI.
muda = "0.19"
